--- a/src/styles/components/Button.scss
+++ b/src/styles/components/Button.scss
@@ -13,7 +13,9 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 30px;
+  border: none;
   &_disabled {
-    background: linear-gradient(0deg, #C4C4C4, #C4C4C4), linear-gradient(180deg, #45A6FF 0%, #0055FB 100%);;
+    background: grey;
+    cursor: not-allowed;
   }
 }
