--- a/src/styles/abstracts/variables.scss
+++ b/src/styles/abstracts/variables.scss
@@ -1,8 +1,14 @@
-$color-grey-main: #F7F7F7;
+$color-grey-main: #E5E5E5;
+$color-grey-second: #F6F6F6;
 $color-white-main: #FFFF;
 $color-error: rgba(207, 44, 0, 0.1);
+$color-hover: #0055FB;
+$color-border: rgba(0, 0, 0, 0.2);
+$color-grey-hover: #999999;
+$color-red-hover: #CF2C00;
 
 // FONT
+$color-text-white: #FFFF;
 $color-black-text: #0D0D0D;
 $color-grey-text: #999999;
 $color-text-error: #CF2C00;
