--- a/src/styles/components/Sizer.scss
+++ b/src/styles/components/Sizer.scss
@@ -1,3 +1,20 @@
 .sizer {
   cursor: pointer;
+  stroke: #0d0d0d;
+  border-radius: .7rem;
+  width: 3.2rem;
+  height: 3.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  svg path {
+    stroke: inherit;
+  }
+  &:hover, &:focus {
+    color: blue;
+    stroke: #0055fb;
+  }
+  &:focus {
+    outline: 2px solid rgb(69, 165, 255, 0.5);
+  }
 }
