--- a/src/styles/components/HistoryItem.scss
+++ b/src/styles/components/HistoryItem.scss
@@ -23,9 +23,14 @@
   &__status {
     width: 1rem;
     height: 1rem;
-    background: #30B800;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid $color-border;
     border-radius: 100%;
+    &_ok {
+      background: #30B800;
+    }
+    &_error {
+      background: $color-red-hover;
+    }
   }
   &__menu {
     position: relative;
