--- a/src/styles/components/Console.scss
+++ b/src/styles/components/Console.scss
@@ -58,6 +58,10 @@
       font-size: 1.4rem;
       white-space: pre-wrap;
       word-break: break-all;
+      &_error {
+        border: 1px solid #CF2C00;
+        box-shadow: 0px 0px 5px rgba(207, 44, 0, 0.5);
+      }
     }
   }
 }
