--- a/src/styles/components/HistoryItem.scss
+++ b/src/styles/components/HistoryItem.scss
@@ -2,18 +2,44 @@
 
 .history-item {
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 12rem;
+  min-width: 13.3rem;
   height: 3rem;
   background: $color-white-main;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  padding: .5rem 1rem;
   transition: box-shadow .3s ease;
   font-size: 1.6rem;
   line-height: 2rem;
+  &-inner {
+    padding: .5rem 1rem;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+    &_copied {
+      &::after {
+        content: "Скопировано";
+        position: absolute;
+        width: 70%;
+        top: 50%;
+        left: 50%;
+        font-size: 1.2rem;
+        line-height: 2rem;
+        background: $color-grey-main;
+        border-radius: .5rem;
+        padding: 0 .5rem;
+        z-index: 100;
+        -webkit-animation-name: slideOutUp;
+        animation-name: slideOutUp;
+        -webkit-animation-duration: 2s;
+        animation-duration: 2s;
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
+      }
+    }
+  }
   &:not(&:nth-child(1)) {
     margin-left: 1rem;
   }
@@ -31,6 +57,9 @@
     &_error {
       background: $color-red-hover;
     }
+  }
+  &__title {
+    margin: 0 1rem;
   }
   &__menu {
     position: relative;
@@ -87,5 +116,19 @@
         }
       }
     }
+  }
+}
+
+@keyframes slideOutUp {
+  0% {
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    -webkit-transform: translateY(-100%) translateX(-50%);
+    transform: translateY(-200%) translateX(-50%);
+    opacity: 50%;
   }
 }
